--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="top">
             <div id="white">
                 <h1>Frist Website</h1>
-                <h2>A simple & basic layout. It helps you <br>
+                <div style="font-size: 25px">A simple & basic layout. It helps you <br>
                     in learning; how to structure your <br>
-                    webpage.</h2><button> GET STARTED </button><br>
+                    webpage.</div><br><button> GET STARTED </button><br>
             </div>
         </div>
     </header>
@@ -80,7 +80,7 @@
             <div id="foot2">I'm an image</div>
             <div id="note" style="text-align: center;">HTML Website Made with &#x2764; by <u>Muhammad Umair
                     Ahmad</u><br>
-                Powered by <a href="https://techna.pk/">Techna</a></div>
+                Powered by <a href="https://techna.pk/" style="color: white;"">Techna</a></div>
         </div>
     </footer>
 
